# rust-maya2018

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
shim/: shim.cpp  shim.h
src/: lib.rs  native.rs  native2.rs
src/OpenMaya/: core.rs  mfn.rs  mod.rs  mpx.rs
